fix dark Mode links

--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,10 @@ body {
   .header {
     border-bottom: 2px solid var(--dark-gray);
   }
+
+  a {
+    color: var(--dark-fg);
+  }
 }
 
 a {
